@@ -11,7 +11,7 @@ before_install:
   - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   # optionally add our launchpad repo, but not needed here
   # - sudo add-apt-repository -y ppa:edd/misc
-  - Rscript -e 'install.packages(c("covr", "devtools", "roxygen2", "testthat", "configr"))'
+  - Rscript -e 'install.packages(c("covr", "devtools", "roxygen2", "testthat", "configr", "knitr", "rmarkdown"))'
 
 install:
   - ./run.sh install_aptget r-cran-rcpp
