@@ -16,4 +16,7 @@ Imports:
     stringr (>= 1.2.0),
     configr (>= 0.3.1)
 RoxygenNote: 6.0.1
-Suggests: testthat
+Suggests: knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
