@@ -9,8 +9,10 @@ UseSpacesForTab: Yes
 NumSpacesForTab: 2
 Encoding: UTF-8
 
-RnwWeave: Sweave
+RnwWeave: knitr
 LaTeX: pdfLaTeX
+
+LineEndingConversion: Posix
 
 BuildType: Package
 PackageUseDevtools: Yes
