@@ -1,7 +1,8 @@
+2017-11-08 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+                * vignettes be added
 2017-11-07 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
                 * merge_table_files be added
                 * reduce qualityconfirm size
-
 2017-10-13 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
                 * gvmap be added in inst/extdata/tools/
 
